tests/baselines/reference/jsContainerMergeTsDeclaration.errors.txt
error TS5055: Cannot write file 'tests/cases/conformance/salsa/a.js' because it would overwrite input file.
  Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
tests/cases/conformance/salsa/a.js(1,10): error TS2300: Duplicate identifier 'x'.
tests/cases/conformance/salsa/b.ts(1,5): error TS2300: Duplicate identifier 'x'.


!!! error TS5055: Cannot write file 'tests/cases/conformance/salsa/a.js' because it would overwrite input file.
!!! error TS5055:   Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
==== tests/cases/conformance/salsa/a.js (1 errors) ====
    var /*1*/x = function foo() {
             ~
!!! error TS2300: Duplicate identifier 'x'.
    }
    x.a = function bar() {
    }
==== tests/cases/conformance/salsa/b.ts (1 errors) ====
    var x = function () {
        ~
!!! error TS2300: Duplicate identifier 'x'.
        return 1;
    }();
    